[package]
name = "rely-server"
version = "0.1.0"
edition = "2021"

default-run = "rely-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0",features = ["full"]}
packet = "0.1.4"
tun = { version = "0.5.4", features = ["async"] }
rand = "0.8.5"